objects/Contact.object
<CustomObject>
    <fields>
        <fullName>INFA_AV__Mailing_Address_Validation_Status__c</fullName>
        <defaultValue>&quot;Not Verified&quot;</defaultValue>
        <label>Mailing Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV__Other_Address_Validation_Status__c</fullName>
        <defaultValue>&quot;Not Verified&quot;</defaultValue>
        <label>Other Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Address_Status__c</fullName>
        <description>Shows return code plus icon</description>
        <formula>If ( avfree__Mailing_Return_Code__c = &quot;Confirmed&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Confirmed&quot; ,16,16) &amp; &quot; Confirmed&quot;, 
If ( avfree__Mailing_Return_Code__c = &quot;Confirmed - By Dropping Secondary Info&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - By Dropping Secondary Info&quot; ,16,16) &amp; &quot; Confirmed - By Dropping Secondary Info&quot;, 
If ( avfree__Mailing_Return_Code__c = &quot;Confirmed - Missing Secondary Info&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - Missing Secondary Info&quot; ,16,16) &amp; &quot; Confirmed - Missing Secondary Info&quot;, 
If ( avfree__Mailing_Return_Code__c  = &quot;Bad or Blank Address&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Bad or Blank Address&quot; ,16,16) &amp; &quot; Bad or Blank Address&quot;, 
If ( avfree__Mailing_Return_Code__c = &quot;Not Submitted&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Submitted&quot; ,16,16) &amp; &quot; Not Submitted&quot;, 
If ( avfree__Mailing_Return_Code__c = &quot;Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Confirmed&quot; ,16,16) &amp; &quot; Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Note Yet Verified&quot; ,16,16) &amp; &quot; Not Yet Verified&quot; ) ) ) ) ) )</formula>
        <inlineHelpText>Confirmed
Not Confirmed
Confirmed - By Dropping Secondary Info
Confirmed - Missing Secondary Info
Not Submitted</inlineHelpText>
        <label>Mailing Address Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Do_Not_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that the mailing address is never verified by the SmartyStreets service</description>
        <inlineHelpText>Check this box so that the mailing address is never verified by the SmartyStreets service</inlineHelpText>
        <label>Mailing Do Not Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Last_Verified__c</fullName>
        <label>Mailing Last Verified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Latitude__c</fullName>
        <description>Latitude for the Geo-Coded, Verified Mailing Address</description>
        <inlineHelpText>Latitude for the Geo-Coded, Verified Mailing Address</inlineHelpText>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Longitude__c</fullName>
        <description>Longitude for the Geo-Coded, Verified Mailing Address</description>
        <inlineHelpText>Longitude for the Geo-Coded, Verified Mailing Address</inlineHelpText>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Return_Code__c</fullName>
        <label>Mailing Return Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Unit_Number__c</fullName>
        <label>Mailing Unit Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avfree__Mailing_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Address_Status__c</fullName>
        <description>Shows return code plus icon</description>
        <formula>If ( avfree__Other_Return_Code__c = &quot;Confirmed&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Confirmed&quot; ,16,16) &amp; &quot; Confirmed&quot;, 
If ( avfree__Other_Return_Code__c = &quot;Confirmed - By Dropping Secondary Info&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - By Dropping Secondary Info&quot; ,16,16) &amp; &quot; Confirmed - By Dropping Secondary Info&quot;, 
If ( avfree__Other_Return_Code__c = &quot;Confirmed - Missing Secondary Info&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - Missing Secondary Info&quot; ,16,16) &amp; &quot; Confirmed - Missing Secondary Info&quot;, 
If ( avfree__Other_Return_Code__c  = &quot;Bad or Blank Address&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Bad or Blank Address&quot; ,16,16) &amp; &quot; Bad or Blank Address&quot;, 
If ( avfree__Other_Return_Code__c = &quot;Not Submitted&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Submitted&quot; ,16,16) &amp; &quot; Not Submitted&quot;, 
If ( avfree__Other_Return_Code__c = &quot;Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Confirmed&quot; ,16,16) &amp; &quot; Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Note Yet Verified&quot; ,16,16) &amp; &quot; Not Yet Verified&quot; ) ) ) ) ) )</formula>
        <inlineHelpText>Confirmed
Not Confirmed
Confirmed - By Dropping Secondary Info
Confirmed - Missing Secondary Info
Not Submitted</inlineHelpText>
        <label>Other Address Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Do_Not_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that the other address is never verified by the SmartyStreets service</description>
        <inlineHelpText>Check this box so that the other address is never verified by the SmartyStreets service</inlineHelpText>
        <label>Other Do Not Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Last_Verified__c</fullName>
        <label>Other Last Verified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Latitude__c</fullName>
        <description>Latitude for the Geo-Coded, Verified Other Address</description>
        <inlineHelpText>Latitude for the Geo-Coded, Verified Other Address</inlineHelpText>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Longitude__c</fullName>
        <description>Longitude for the Geo-Coded, Verified Other Address</description>
        <inlineHelpText>Longitude for the Geo-Coded, Verified Other Address</inlineHelpText>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Return_Code__c</fullName>
        <label>Other Return Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Unit_Number__c</fullName>
        <label>Other Unit Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avfree__Other_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>